Prevent selection on safari for tournament pages and the study editor form.

--- a/ui/analyse/css/study/_editor.scss
+++ b/ui/analyse/css/study/_editor.scss
@@ -20,7 +20,7 @@
     grid-template-rows: auto min-content;
     grid-template-areas: 'spare-top' 'e-board' 'spare-bottom' 'e-tools';
   }
-  user-select: none;
+  @include prevent-select;
 
   .main-board {
     grid-area: e-board;
