--- a/ui/tournament/css/schedule/_schedule.scss
+++ b/ui/tournament/css/schedule/_schedule.scss
@@ -13,7 +13,7 @@ $c-tour-max-rating: #8572ff;
 .tour-chart {
   min-height: 400px;
   position: relative;
-  user-select: none;
+  @include prevent-select;
 
   .spinner {
     width: 120px;
